# COMPASSKernel

./: .gitignore  3DGrid.h  CMakeLists.txt  COMPASSKernel.sln  COMPASSKernel.vcxproj  COMPASSKernel.vcxproj.filters  MomentReader.cpp  MomentReader.h  README.md  SettingsClass.h  SimEnvironment.cpp  SimEnvironment.h  helpers.cpp  helpers.h  main.cpp  multithreadingSim.cpp  multithreadingSim.h  scriptHandler.cpp  scriptHandler.h  simRunner.cpp  simRunner.h  timeUtility.cpp  timeUtility.h
include/: 3DGrid.h  SettingsClass.h  SimEnvironment.h  ThreadLogger.h  helpers.h  multithreadingSim.h  scriptHandler.h  timeUtility.h
src/: SettingsClass.cpp  SimEnvironment.cpp  helpers.cpp  main.cpp  multithreadingSim.cpp  scriptHandler.cpp  simRunner.cpp  timeUtility.cpp
